name:                rcon
version:             0.0.0.1
synopsis:            Implementation of the rcon protocol
-- description:
homepage:            https://github.com/ion1/rcon-haskell
license:             ISC
license-file:        COPYING
author:              Johan Kiviniemi
maintainer:          devel@johan.kiviniemi.name
-- copyright:
category:            Network
build-type:          Simple
cabal-version:       >= 1.8

library
  exposed-modules:     Network.Rcon,
                       Network.Rcon.Client
  other-modules:       Network.Rcon.Parse,
                       Network.Rcon.Serialize,
                       Network.Rcon.Types
  build-depends:       attoparsec == 0.10.*,
                       base == 4.*,
                       bytestring >= 0.9 && < 0.11,
                       cereal >= 0.3 && < 0.5,
                       network == 2.3.*,
                       stm >= 2.3 && < 2.5,
                       time == 1.4.*
  ghc-options:         -Werror -Wall
  cc-options:          -Werror -Wall -Wextra

executable rcon-client
  main-is:             ClientMain.hs
  build-depends:       attoparsec == 0.10.*,
                       base == 4.*,
                       bytestring >= 0.9 && < 0.11,
                       cereal >= 0.3 && < 0.5,
                       network == 2.3.*,
                       stm >= 2.3 && < 2.5,
                       time == 1.4.*,
                       unix >= 2.5 && < 2.8
  ghc-options:         -Werror -Wall
  cc-options:          -Werror -Wall -Wextra

test-suite test-rcon
  type:                exitcode-stdio-1.0
  main-is:             RunTests.hs
  build-depends:       attoparsec == 0.10.*,
                       base == 4.*,
                       bytestring >= 0.9 && < 0.11,
                       cereal >= 0.3 && < 0.5,
                       network == 2.3.*,
                       QuickCheck >= 2.4 && < 2.7,
                       network == 2.3.*,
                       test-framework >= 0.6 && < 0.9,
                       test-framework-quickcheck2 >= 0.2 && < 0.4,
                       time == 1.4.*
  ghc-options:         -Werror -Wall
  cc-options:          -Werror -Wall -Wextra

source-repository head
  type:                git
  location:            git://github.com/ion1/rcon-haskell.git

-- vim:set et sw=2 sts=2:
